--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,3 +1,3 @@
 <h2 id="title">Welcome to Ember</h2>
-<FroalaEditor @content="<p>Foobar</p>" id="editor" />
+<FroalaEditor @content={{this.content}} id="editor" />
 {{outlet}}
